# netherfire

./: Cargo.toml  README.md
src/: main.rs  mod_site.rs  progress.rs  uwu_colors.rs
src/checks/: mod.rs  verify_mods.rs
src/config/: global.rs  mod.rs  mods.rs  pack.rs
src/output/: curseforge_manifest.rs  mod.rs  mod_download.rs  modrinth_manifest.rs
