[package]
name = "netherfire"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
thiserror = "1.0.49"

derive_more = "0.99.17"

async-trait = "0.1.73"
futures = "0.3.28"
itertools = "0.11.0"

once_cell = "1.18.0"

serde_json = "1.0.107"
toml = "0.8.2"

directories = "5.0.1"

furse = "1.5.12"
ferinth = "~2.9.2"

zip = "0.6.6"

reflink = "0.1.3"
walkdir = "2.4.0"

hex = "0.4.3"
digest = "0.10.7"

# Insecure AF, but it's what CurseForge & Modrinth requires... :|
sha1 = "0.10.6"
md-5 = "0.10.6"

sha2 = "0.10.8"

[dependencies.clap]
version = "4.4.6"
features = ["derive"]

[dependencies.console]
version = "0.15.7"

[dependencies.indicatif]
version = "0.17.7"
features = ["tokio"]

[dependencies.reqwest]
version = "0.11.22"
features = ["stream"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]

[dependencies.tokio]
version = "1.33.0"
features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "io-util"]

[dependencies.tokio-util]
version = "0.7.9"
features = ["compat", "io", "io-util"]
