[package]
name = "netherfire"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
thiserror = "2.0.9"
# Inherit from owo-colors
supports-color = "*"

async-trait = "0.1.84"
futures = "0.3.31"
itertools = "0.14.0"

once_cell = "1.20.2"

serde_json = "1.0.134"
toml = "0.8.19"

directories = "5.0.1"

furse = "1.5.15"
ferinth = "~2.11.1"

zip = "2.2.2"

reflink = "0.1.3"
walkdir = "2.5.0"

hex = "0.4.3"
digest = "0.10.7"

# Insecure AF, but it's what CurseForge & Modrinth requires... :|
sha1 = "0.10.6"
md-5 = "0.10.6"

sha2 = "0.10.8"

[dependencies.clap]
version = "4.5.23"
features = ["derive"]

[dependencies.derive_more]
version = "1.0.0"
features = ["full"]

[dependencies.owo-colors]
version = "4.1.0"
features = ["supports-colors"]

[dependencies.reqwest]
version = "0.12.12"
features = ["stream"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.tokio]
version = "1.42.0"
features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "io-util"]

[dependencies.tokio-util]
version = "0.7.13"
features = ["compat", "io", "io-util"]
