[package]
name = "netherfire"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
# Inherit from owo-colors
supports-color = "*"

async-trait = "0.1.89"
futures = "0.3.31"
itertools = "0.14.0"

once_cell = "1.21.3"

serde_json = "1.0.145"

directories = "6.0.0"

furse = "1.6.1"
ferinth = "~2.12.0"

zip = "6.0.0"

reflink = "0.1.3"
walkdir = "2.5.0"

hex = "0.4.3"
digest = "0.10.7"

# Insecure AF, but it's what CurseForge & Modrinth requires... :|
sha1 = "0.10.6"
md-5 = "0.10.6"

sha2 = "0.10.9"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[dependencies.derive_more]
version = "2.0.1"
features = ["full"]

[dependencies.owo-colors]
version = "4.2.3"
features = ["supports-colors"]

[dependencies.reqwest]
version = "0.12.24"
features = ["stream"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.tokio]
version = "1.48.0"
features = ["rt-multi-thread", "macros", "sync", "fs", "io-std", "io-util"]

[dependencies.tokio-util]
version = "0.7.17"
features = ["compat", "io", "io-util"]

[dependencies.toml_edit]
version = "0.23.7"
features = ["serde"]
